[package]
name = "dynasty2"
version = "0.1.0"
edition = "2021"

[dependencies]
backoff = { version = "0.4.0", features = ["futures"] }
chrono = { version = "0.4.38", default-features = false, optional = true }
futures = { version = "0.3.30", default-features = false }
reqwest = { version = "0.12.5", features = ["json"], optional = true }
serde = { version = "1.0.206", features = ["derive"] }
time = { version = "0.3.36", optional = true, default-features = false }
tracing = "0.1.40"
url = "2.5.2"

[features]
default = ["reqwest", "tokio"]
reqwest = ["dep:reqwest"]
tokio = ["backoff/tokio"]
time = ["dep:time"]
chrono = ["dep:chrono"]

pairings = []
